objects/APTS_Country_Defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_BulkUploadChunkSize__c</fullName>
        <label>Bulk Upload Chunk Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Consolidation_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Consolidation enabled for Agreement</description>
        <inlineHelpText>Is Consolidation enabled for Agreement</inlineHelpText>
        <label>Consolidation is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Consolidation_Discount_Approach__c</fullName>
        <defaultValue>&quot;Lowest&quot;</defaultValue>
        <description>Choose discount selection approach when no hierarchy added for consolidation. Value should be either Lowest or Frequent</description>
        <inlineHelpText>Choose discount selection approach when no hierarchy added for consolidation. Value should be either Lowest or Frequent</inlineHelpText>
        <label>Consolidation Discount Approach</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Consolidation_Hierarchy_Level__c</fullName>
        <inlineHelpText>WARNING: do not change this until the second release of consolidation! Logic is mostly hard-coded!
comma separated list with field api names for the ConsolidateBy picklist.</inlineHelpText>
        <label>Consolidation Hierarchy Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Consolidation_Tolerance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Tolerance percentage to be considered while doing consolidation when creating MSPA from quotation</description>
        <inlineHelpText>Tolerance percentage to be considered while doing consolidation when creating MSPA from quotation</inlineHelpText>
        <label>Consolidation Tolerance</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_DefaultHierarchyDiscSAP__c</fullName>
        <description>Default discount on hierarchy that will be send to SAP while creating MSPA - This will be fixed for Spain</description>
        <label>MSPA SAP Default Hierarchy Disc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_DefaultProductDiscSAP__c</fullName>
        <description>Default discount on Products that will be send to SAP while creating MSPA - This will be fixed for Spain</description>
        <label>MSPA SAP Default Product Disc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Default_Max_Summary_Group_Size__c</fullName>
        <description>This field is used to set size for Async preview approval process.</description>
        <label>APTS Default Max Summary Group Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Folder_Name__c</fullName>
        <description>For R2 Req-5801, field created to display folder name in Custom VF page</description>
        <inlineHelpText>Field used for Italian Email Template</inlineHelpText>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_HierarchyCodePrefix__c</fullName>
        <description>Code will be prefixed to the bulk uploaded file. this means if file is uploaded with code &apos;M01&apos; then it would system will make it &apos;00M01&apos; if the Hierarchy Code Prefix is &apos;00&apos;</description>
        <label>Hierarchy Code Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Default_Discount__c</fullName>
        <description>Default Discount for Hierarchy in WS</description>
        <label>WS Hierarchy Default Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Consolidation_Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidation is Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LCA_Group_Name__c</fullName>
        <description>name of the public group in which the LCA for this specific Country is part of..</description>
        <label>LCA Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Exclude_Products_from_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Total of the product lines will not be considered in Grand Total and Sub Total</description>
        <inlineHelpText>Total of the product lines will not be considered in Grand Total and Sub Total</inlineHelpText>
        <label>WS MSPA Exclude Products from Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Qty_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quantity field on Workspace page will be editable for Manually added lines if selected.</description>
        <inlineHelpText>Quantity field on Workspace page will be editable for Manually added lines if selected.</inlineHelpText>
        <label>WS MSPA Qty Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Subtype_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated MSPA subtype is editable for specified country</description>
        <inlineHelpText>MSPA subtype is editable for specified country if value is true</inlineHelpText>
        <label>MSPA Subtype Editable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_Subtype__c</fullName>
        <description>default Subtype value for MSPA.</description>
        <inlineHelpText>Default Subtype for MSPA, Format: Opportunity#Project, Account#Order</inlineHelpText>
        <label>MSPA Subtype</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPA_isGroupLineSelectionAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>only used in backend</inlineHelpText>
        <label>WS MSPA Group Line Selection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MaxOrderAmt_as_Workspace_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED in R6 - Update Max Order Amount field on Agreement header with &quot;Grand Total Net Sales Price&quot; as displayed on Workspace</description>
        <inlineHelpText>DEPRECATED in R6 - Update Max Order Amount field on Agreement header with &quot;Grand Total Net Sales Price&quot; as displayed on Workspace</inlineHelpText>
        <label>WS Update MSPA MaxOrderAmt w/ TNSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_BU_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QFA_R3_MR4 - Req#6662 -US#3124- This field determines BU Validation check for adding products into Cart</description>
        <label>APTS_Product BU Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_BU__c</fullName>
        <description>QFA_R3_MR4 - Req#6662-US#3124- This field contains possible mixed china BU values that can be added into the cart.</description>
        <label>APTS_Product_BU</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Default_Discount__c</fullName>
        <description>product default discount for line item in WS</description>
        <label>WS Product Default Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Scale_type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Scaling button will be visible on Workspace for each line item</inlineHelpText>
        <label>WS Enable Scaling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Show_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To Show Comment Column in Workspace</inlineHelpText>
        <label>Show Comments in WS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Show_Empty_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display empty Hierarchy level columns on email notification mail when no value is present for Line items</description>
        <inlineHelpText>Display empty Hierarchy level columns on email notification mail when no value is present for Line items</inlineHelpText>
        <label>Show Empty Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Subtype__c</fullName>
        <description>Default Subtype on Quotation</description>
        <inlineHelpText>Default Subtype on Quotation</inlineHelpText>
        <label>Quotation Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_TranslateOn_ConsolidationPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, In Consolidation Page Hierarchy Levels will be displayed as in Salesworkspace.</description>
        <inlineHelpText>Enable If Consolidation Page Hierarchy Levels needs to be displayed as in Salesworkspace.</inlineHelpText>
        <label>TranslateOn ConsolidationPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Unknown_Account_GUID__c</fullName>
        <description>GUID of unknown account</description>
        <label>Unknown Account GUID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WS_Pricing_Batch_Size__c</fullName>
        <description>Workspace pricing batch size; used to prepare chunk of this size while clicking go to cart in WS</description>
        <label>WS Pricing Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_WS_Warn_NetAdjVariation__c</fullName>
        <description>R6; RQ 1527</description>
        <inlineHelpText>Show warnings if the Net Adjustment of grouped line items varies from the hierarchy&apos;s Net Adj. Possible values: &quot;higher&quot; (warn if the grouped line item has a higher Net Adj than the hierarchy); &quot;lower&quot; (vice versa); &quot;always&quot;; leave &lt;empty&gt; to disable this</inlineHelpText>
        <label>WS Warn NetAdj Variation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Workspace_Discount_Labels__c</fullName>
        <label>WS Discount Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Workspace_Grouping_Fields__c</fullName>
        <inlineHelpText>comma separated list used for GroupBy picklist. Each item includes the field API name followed by #, followed by &quot;Y&quot; or &quot;N&quot; (yes or no) to indicate if it shall be selectable via checkbox (like &quot;APTS_Hierarchy_Level_2_Code__c#Y&quot;)</inlineHelpText>
        <label>WS Grouping Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Workspace_Grouping_Labels__c</fullName>
        <inlineHelpText>comma-separated list of &quot;api-name:label&quot; combinations to override the standard labels in the group-by in workspace</inlineHelpText>
        <label>WS Grouping Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Send_Email_to_Owner_on_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4.1: If the Approval User makes any modifications and then approves the current Approval Step the Quote/MSPA, the Quote/MSPA Owner is receiving an email notification.</description>
        <inlineHelpText>If the Approval User makes any modifications and then approves the current Approval Step the Quote/MSPA, the Quote/MSPA Owner is receiving an email notification.</inlineHelpText>
        <label>Approval Send Email to Owner on Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Summary_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>EP R6 Manage approval summary page field access</description>
        <inlineHelpText>Prohibit standard access rights for discounts and dates</inlineHelpText>
        <label>Approval Summary Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Duplicities_By_Scale_Qty_isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bulk Upload validation - Indicates if validation of duplicated products should also consider the scale quantity field.</description>
        <label>BU Duplicities By Scale Qty Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_MSPA_on_Unknown_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to block MSPA creation on Unknown Accounts when checked.</description>
        <label>Block MSPA on Unknown Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Quotes_on_Unknown_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not allow user to create Quotations from Unknown Account.</description>
        <inlineHelpText>Do not allow user to create Quotations from Unknown Account.</inlineHelpText>
        <label>Block Quotes on Unknown Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consider_Hierarchy__c</fullName>
        <description>This field is used to consider Hierarchy in approval process.</description>
        <label>Consider Hierarchy In Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consider_SAP_Std_Disc__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked then Std. Disc will be calculated based on Percentage1, Percentage2 &amp; Percentage3 from SAP. Otherwise, List Price &amp; Market Price are used to calculate it.</inlineHelpText>
        <label>WS Consider SAP Std. Disc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Distribution_Channel_Code__c</fullName>
        <label>Default Distribution Channel Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Distribution_Channel_Non_Buying__c</fullName>
        <label>Default Distribution Channel Non Buying</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Local_Channel_Code__c</fullName>
        <label>Default Local Channel Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Local_Channel_Non_Buying__c</fullName>
        <label>Default Local Channel Non Buying</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Office_Code__c</fullName>
        <label>Default Sales Office Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Sales_Office_Non_Buying__c</fullName>
        <label>Default Sales Office Non Buying</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_ConfigIT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Shows / hides the &quot;Add Configuration&quot; button in workspace</inlineHelpText>
        <label>WS Enable ConfigIT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Wholesaler__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This enables showing the Wholesaler mode &amp; Wholesaler edit dialogue in Workspace.</inlineHelpText>
        <label>WS Enable Wholesaler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_Threshold_button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Req. 5807 - If the flag is set to true Threshold button will be hided in Workspace page</description>
        <label>Hide Threshold button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_in_eDesign_Template__c</fullName>
        <description>This field is used to identify which hierarchy is consider while populating E-design template.</description>
        <label>Hierarchy Considered in eDesign Template</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTemplateOptimized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to find whether template is optimized similar to Italy</description>
        <label>IsTemplateOptimized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Approval_level_applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QfA-R3-MR2 - REQ# 6137 - Boolean to check if Approval level based on Discount threshold is applicable for the country. It is referred in Email templates for Approval Notifications</description>
        <label>Is Approval level applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Market_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to auto-populate the Market field on the Quote/Agreement</description>
        <label>IsMarketDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Threshold_based_on_BusinessType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to find whether the approval is based on the Biding/Non-Biding</description>
        <label>Is Threshold based on BusinessType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Threshold_based_on_Local_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Threshold based on Local Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Threshold_based_on_Subtype__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QFA-R3-MR4-Req#6663-US#3101 &amp; US-#3125 - This Field determines whether Approval Threshold Limit calculation is based on Quote/MSPA Sub-type.</description>
        <label>Is Threshold Based on Subtype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IseDesignEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether e-Design is enabled for the particular Country</description>
        <label>IseDesignEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSPA_Channel_Class_Level_check__c</fullName>
        <label>MSPA Channel Class Level check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MSPA_Industry_Usage_Level_Check__c</fullName>
        <label>MSPA Industry Usage Level Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manage_Hierarchy_List_Prices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables hierarchy override of List Prices and Quantity with values from the &quot;Hierarchy Price&quot; object</inlineHelpText>
        <label>WS Manage Hierarchy List Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_MSPA_Qty_for_Product__c</fullName>
        <inlineHelpText>if this has no value == is empty, then no override takes place and the quantity stays as is.</inlineHelpText>
        <label>WS Override MSPA Qty. for Product</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Unit_of_Price__c</fullName>
        <description>Introduced as part of DEFECT 7507</description>
        <inlineHelpText>Overrides &quot;Unit of Price&quot; if &quot;List Price&quot; is coming null from SAP (Value must be integer)</inlineHelpText>
        <label>WS Override Unit of Price</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Channel_Class_Level_check__c</fullName>
        <label>Quote Channel Class Level check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Industry_Usage_Level_Check__c</fullName>
        <label>Quote Industry Usage Level Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Class_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is ensure that the  Class Channel field on MSPA should be sent to SAP or not</description>
        <label>SAP Class Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Industrial_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is ensure that the Industrial Usage field on MSPA should be sent to SAP or not</description>
        <label>SAP Industrial Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to ensure that Market field on MSPA should be sent to SAP while creating MSPA in SAP</description>
        <label>SAP_Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_PrimaryPartner_LocalChannel_CodeDesc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAP PrimaryPartner LocalChannel CodeDescription will be sent to SAP in CustomerGroup field</description>
        <inlineHelpText>Enable if SAP PrimaryPartner LocalChannel CodeDescription has to be sent to SAP.</inlineHelpText>
        <label>SAP PrimaryPartner LocalChannel CodeDesc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Area_ApttusOrgId__c</fullName>
        <description>This value is used to store Sales Area ApttusOrgId for each Country.</description>
        <label>Sales Area ApttusOrgId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Based_on_Disc_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Threshold Based on Disc. Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threshold_Dimension1__c</fullName>
        <description>This field is used to hold the dimension values of Approval Field</description>
        <label>Threshold Grp Name(Dimension1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Dimension2__c</fullName>
        <description>This field is used to hold the dimension values of Approval Field</description>
        <label>Threshold Disc.(Dimension2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold_Dimension3__c</fullName>
        <description>This field is used to hold the dimension values of Approval Field</description>
        <label>Threshold Local Segment(Dimension3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sendCustomerMaterialCodeSAP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WS Send Customer Material Code to SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendHierarchiestoSAP__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Some Country-SAP servers cannot handle hierarchies. If this is unchecked, List Prices will be set to 0 in SFDC and no other details are retrieved from SAP</inlineHelpText>
        <label>WS Send Hierarchies to SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendSalesDistributionChannelToSAP__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>some SAP servers cannot handle the Distribution Channel</inlineHelpText>
        <label>SAP Send Sales Distribution Channel</label>
        <type>Checkbox</type>
    </fields>
    <label>APTS Country Defaults</label>
</CustomObject>